Fix overflow when no paginator present with summary row (#1147)

--- a/apps/base/styles/components/_table.scss
+++ b/apps/base/styles/components/_table.scss
@@ -74,13 +74,18 @@
       }
     }
   }
+
   tfoot {
-    bottom: 3.2rem;
+    bottom: 0;
     position: sticky;
     width: 100%;
 
     td {
       border-top: 1px solid var(--c-gray);
+    }
+
+    &.tfoot--pagination {
+      bottom: 3.2rem;
     }
   }
 
